[package]
name = "scirs2-spatial"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Spatial algorithms module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["spatial", "distance", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
num = { workspace = true }
approx = { workspace = true }

# Computational geometry
qhull = { workspace = true }
rand = { workspace = true }

# Linear algebra dependencies
# scirs2-linalg = { workspace = true }  # Temporarily disabled due to compilation errors
ndarray-linalg = { workspace = true }

[features]
default = []
parallel = []

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand_chacha = { workspace = true }
plotters = { workspace = true }
num_cpus = "1.16"

[[bench]]
name = "spatial_benchmarks"
harness = false

[[bench]]
name = "simple_spatial_bench"
harness = false

[[bench]]
name = "quick_spatial_bench"
harness = false

[[bench]]
name = "minimal_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false
