[package]
name = "scirs2-special"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Special functions module for SciRS2 (scirs2-special)"
license.workspace = true
repository.workspace = true
keywords = ["special-functions", "gamma", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["validation", "simd"] }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
lazy_static = { workspace = true }
regex = { version = "1.10", optional = true }
plotters = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["python-interop"]
parallel = ["scirs2-core/parallel", "ndarray/rayon"]  # rayon accessed through core
simd = ["scirs2-core/simd"]
lazy = ["futures"]
gpu = ["scirs2-core/gpu"]  # GPU accessed through core
# array-api = ["arrayfire", "candle"]  # Disabled - placeholder for future implementation
high-precision = ["rug"]               # Arbitrary precision computations
python-interop = ["regex"]             # Python interoperability features
plotting = ["plotters"]                # Visualization and plotting support
interactive = []                       # Interactive visualization (future feature)

# Optional dependencies for advanced features
[dependencies.futures]
version = "0.3"
optional = true

# GPU and parallel dependencies removed - using core abstractions
# [dependencies.wgpu]
# version = "0.20"
# optional = true
#
# [dependencies.bytemuck]
# version = "1.14"
# features = ["derive"]
# optional = true
#
# [dependencies.rayon]
# version = "1.10"
# optional = true

# Note: These are placeholder features - actual implementations would use appropriate crates
# [dependencies.arrayfire]
# version = "3.8"
# optional = true

# [dependencies.candle]
# version = "0.6"
# optional = true

[dependencies.rug]
version = "1.19"
optional = true

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
