[package]
name = "scirs2-stats"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Statistical functions module for SciRS2 (scirs2-stats)"
license.workspace = true
repository.workspace = true
keywords = ["statistics", "probability", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
# Linear algebra for PCA and other multivariate methods
ndarray-linalg = { workspace = true, default-features = false }
scirs2-core = { workspace = true, features = ["validation", "parallel", "simd", "linalg"] }
scirs2-linalg = { workspace = true }

# Statistics specific dependencies
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true }
statrs = { workspace = true }
special-11 = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotters = { workspace = true }

[features]
default = []
# BLAS backends - these are mutually exclusive, managed through scirs2-core
openblas = ["scirs2-core/openblas"]
intel-mkl = ["scirs2-core/intel-mkl"]
netlib = ["scirs2-core/netlib"]

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "statistical_tests"
harness = false

[[bench]]
name = "scipy_comparison"
harness = false
