[package]
name = "scirs2-stats"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Claude AI Assistant"]
description = "Statistical functions module for SciRS2 (scirs2-stats)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["statistics", "probability", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { version = "0.16", features = ["std", "serde", "rayon"] }
num-traits = "0.2"
num-complex = "0.4"
thiserror = "1.0"
# Linear algebra for PCA and other multivariate methods
ndarray-linalg = { version = "0.17", default-features = false }
scirs2-core = { path = "../scirs2-core", features = ["validation", "parallel", "simd", "linalg"] }
scirs2-linalg = { path = "../scirs2-linalg" }

# Statistics specific dependencies
rand = "0.9"
rand_distr = "0.4"
rand_pcg = "0.9"
rand_chacha = "0.9"
statrs = "0.18"
special = "0.10"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
either = "1.0"
chrono = { version = "0.4", features = ["serde"] }
memmap2 = "0.9"
quickcheck = "1.0"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
plotters = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.9"

[features]
default = []
# BLAS backends - these are mutually exclusive, managed through scirs2-core
openblas = ["scirs2-core/openblas"]
# intel-mkl = ["scirs2-core/intel-mkl"]  # Removed due to conflicts with openblas
netlib = ["scirs2-core/netlib"]
# Memory mapping support for large files
memmap = []

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "statistical_tests"
harness = false

[[bench]]
name = "scipy_comparison"
harness = false

[[bench]]
name = "comprehensive_scipy_comparison"
harness = false


