[package]
name = "scirs2-transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Data transformation module for SciRS2 (scirs2-transform)"
license.workspace = true
repository.workspace = true
keywords = ["transform", "feature-engineering", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[[bench]]
name = "transform_bench"
harness = false

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["validation", "parallel", "simd"] }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
ndarray-stats = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
# rayon = { workspace = true }  # Now use scirs2-core parallel abstractions
rand = { workspace = true }
num_cpus = "1.16"
regex = { workspace = true }
ahash = "0.8"

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[features]
default = []
simd = ["scirs2-core/simd"]
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]

[dev-dependencies]
scirs2-datasets = { workspace = true }
plotters = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
ndarray-rand = { workspace = true }
